podium and score changes